# finBERT

./: .gitignore  Dockerfile  docker-compose.yaml  keys.json.example  main.py  pyproject.toml
.github/workflows/: docker-image.yml
