[project]
name = "finbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2.5",
    "joblib==0.13.2",
    "jupyter==1.0.0",
    "nltk>=3.8.1",
    "pandas>=0.23",
    "scikit-learn==0.21.2",
    "spacy==2.1.4",
    "textblob>=0.17.1",
    "torch==1.1.0",
    "tqdm>=4.67.1",
    "transformers==4.1.1",
]
