[project]
name = "finbert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2.5",
    "flask-cors>=5.0.0",
    "joblib==1.2.0",
    "jupyter==1.0.0",
    "nltk>=3.8.1",
    "pandas>=0.23",
    "praw",
    "pytorch-pretrained-bert>=0.6.2",
    "scikit-learn==1.5.1",
    "spacy==2.1.4",
    "textblob>=0.17.1",
    "torch==2.6.0",
    "tqdm>=4.67.1",
    "transformers==4.48.0",
]
